Update github action (#63)